# libgossip

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  gossip.c  gossip.h  gsp_udp.c  gsp_udp.h  utils.c
src/client/: CMakeLists.txt  demo.c
src/lib/: json_helper.h  serialize.c  serialize.h  utils.c  utils.h
tests/: CMakeLists.txt  gossip_test.cpp
tools/: build.sh
